crates/hwc-parser/grammar/hardware.grammar
# Hardware Script Language Grammar Specification v0.1.3
# This file defines the complete syntax of the Hardware Script language
# Based on: hwc/crates/hwc-parser/doc/v0.1.3/PARSER-SPECIFICATION.md
#
# CASE SENSITIVITY MODEL (Tri-Fold):
# - Software Domain: STRICTLY LOWERCASE (keywords, origin points, coordinate axes)
# - Physics Domain: STRICTLY SI STANDARD (mV, kΩ, MHz)
# - User Domain: CASE-SENSITIVE (component names, identifiers)

# ============================================================================
# PROGRAM STRUCTURE
# ============================================================================

program ::= statement*

statement ::= 
    | import_statement
    | space_definition
    | component_definition
    | comment

# ============================================================================
# IMPORT SYSTEM
# ============================================================================

import_statement ::= "import" identifier "from" module_path

module_path ::= 
    | identifier ("." identifier)*           # standard.materials
    | "@" identifier "/" identifier          # @robotics/motor

# ============================================================================
# SPACE DEFINITION (Main hardware design)
# ============================================================================

space_definition ::= 
    "define" "space" string ":"
    INDENT
        space_body
    DEDENT

space_body ::= 
    | dimensions_block
    | grid_block
    | origin_block
    | substrate_placement
    | component_placement
    | route_definition
    | expose_statement

# Dimensions: Physical size of the space
dimensions_block ::= "dimensions:" measurement "by" measurement "by" measurement

# Grid: Discrete voxel resolution
grid_block ::= "grid:" integer "by" integer "by" integer

# Origin: Coordinate system origin point (optional, defaults to TL)
origin_block ::= "origin:" origin_point

# Substrate: Base material spanning a volume
substrate_placement ::= 
    "add" "substrate" "(" identifier ")" 
    "spanning" coordinate "to" coordinate

# ============================================================================
# COMPONENT PLACEMENT
# ============================================================================

component_placement ::= 
    "add" component_type 
    parameters?
    ("named" identifier)?
    "at" coordinate
    ("rotated" rotation)?

component_type ::= identifier  # Battery, Resistor, LED, etc.

parameters ::= "(" parameter_list ")"

parameter_list ::= parameter ("," parameter)*

parameter ::= measurement  # 12V, 4.7kΩ, 100nF

# ============================================================================
# ROUTING
# ============================================================================

route_definition ::= 
    "route" pin_reference "to" pin_reference ":"
    INDENT
        "path" ":"
        INDENT
            waypoint_list
        DEDENT
    DEDENT

pin_reference ::= identifier "." identifier  # Component.Pin

waypoint_list ::= ("-" coordinate)+

# ============================================================================
# EXPOSE (Module system)
# ============================================================================

expose_statement ::= "expose" pin_reference "as" identifier

# ============================================================================
# COMPONENT DEFINITION (Custom components)
# ============================================================================

component_definition ::= 
    "define" "component" string ":"
    INDENT
        component_body
    DEDENT

component_body ::= 
    | pins_block
    | behavior_block
    | layout_block
    | electrical_block
    | render_block

# Pins: Define component pins
pins_block ::= 
    "pins" ":"
    INDENT
        identifier+
    DEDENT

# Behavior: Logic and functionality (future)
behavior_block ::= 
    "behavior" ":"
    INDENT
        # Future: behavioral specifications
    DEDENT

# Layout: Physical shape and dimensions
layout_block ::= 
    "layout" ":"
    INDENT
        "shape" ":" shape_definition
    DEDENT

shape_definition ::= 
    | "Rectangle" "(" measurement "," measurement "," measurement ")"
    | "Cylinder" "(" measurement "," measurement ")"
    | "Sphere" "(" measurement ")"

# Electrical: Electrical properties (future)
electrical_block ::= 
    "electrical" ":"
    INDENT
        # Future: electrical specifications
    DEDENT

# Render: 3D visualization properties (future)
render_block ::= 
    "render" ":"
    INDENT
        # Future: rendering specifications
    DEDENT

# ============================================================================
# PRIMITIVES
# ============================================================================

# Coordinates: Two syntax forms supported
coordinate ::= 
    | positional_coordinate      # [X, Y, Z] - positional format
    | declarative_coordinate     # [x:10, y:15, z:2] - declarative format

# Positional coordinates: [X, Y, Z] format (1-indexed, no spaces after commas)
positional_coordinate ::= "[" integer "," integer "," integer "]"

# Declarative coordinates: [axis:value, ...] format (any order)
declarative_coordinate ::= "[" coordinate_pair ("," coordinate_pair)* "]"

coordinate_pair ::= coordinate_axis ":" integer

coordinate_axis ::= 
    | "x"                        # X-axis (column, left to right) - LOWERCASE ONLY
    | "y"                        # Y-axis (row, direction depends on origin) - LOWERCASE ONLY
    | "z"                        # Z-axis (layer, 1=top, 2=inner, 3=bottom) - LOWERCASE ONLY

# Origin points: Coordinate system abstraction (shorthand) - LOWERCASE ONLY
origin_point ::= 
    | "tl"                       # Top-Left (default) - Y increases downward
    | "bl"                       # Bottom-Left - Y increases upward  
    | "tr"                       # Top-Right - X decreases, Y increases downward
    | "br"                       # Bottom-Right - X decreases, Y increases upward

# Rotation: Arbitrary numeric angles (integers or floats, positive or negative)
rotation ::= 
    | integer                    # 90, 45, -30
    | float                      # 35.5, -30.5
    | integer "deg"              # 90deg
    | float "deg"                # 35.5deg

# Measurements: Number + Unit
measurement ::= (integer | float) unit

# ============================================================================
# UNITS (Strict pairs: symbol + keyboard alias)
# Based on: hwc/crates/hwc-parser/doc/v0.1.2/UNIT-SYSTEM-AND-ERROR-HANDLING.md
# ============================================================================

unit ::= 
    # Distance
    | "mm"                       # Millimeters
    | "cm"                       # Centimeters
    
    # Voltage
    | "V"                        # Volts
    | "mV"                       # Millivolts
    
    # Current
    | "A"                        # Amperes
    | "mA"                       # Milliamperes
    | "µA" | "uA"                # Microamperes (symbol + alias)
    
    # Resistance
    | "Ω" | "Ohm"                # Ohms (symbol + alias)
    | "kΩ" | "kOhm"              # Kiloohms (symbol + alias)
    | "MΩ" | "MOhm"              # Megaohms (symbol + alias)
    
    # Capacitance
    | "F"                        # Farads
    | "µF" | "uF"                # Microfarads (symbol + alias)
    | "nF"                       # Nanofarads
    | "pF"                       # Picofarads
    
    # Inductance
    | "H"                        # Henrys
    | "µH" | "uH"                # Microhenrys (symbol + alias)
    | "mH"                       # Millihenrys
    
    # Frequency
    | "Hz"                       # Hertz
    | "kHz"                      # Kilohertz
    | "MHz"                      # Megahertz
    | "GHz"                      # Gigahertz
    
    # Angle
    | "°" | "deg"                # Degrees (symbol + alias)

# ============================================================================
# LEXICAL ELEMENTS
# ============================================================================

# Identifiers: PascalCase, snake_case, or camelCase
identifier ::= [a-zA-Z_][a-zA-Z0-9_]*

# Numbers
integer ::= -?[0-9]+
float ::= -?[0-9]+\.[0-9]+

# Strings: Double-quoted
string ::= "\"" [^"]* "\""

# Comments
comment ::= 
    | "#" [^\n]*                 # Single-line comment
    | "##" [^\n]*                # Documentation comment

# Whitespace
WHITESPACE ::= [ \t\r]+          # Spaces and tabs (skip)
NEWLINE ::= "\n"                 # Newline (track for indentation)

# Indentation tokens (generated by lexer)
INDENT ::= <increase in indentation>
DEDENT ::= <decrease in indentation>

# ============================================================================
# KEYWORDS (Reserved words - STRICTLY LOWERCASE)
# ============================================================================

# Action verbs (lowercase only)
KEYWORDS_ACTION ::= "import" | "define" | "add" | "route" | "expose"

# Connectors (lowercase only)
KEYWORDS_CONNECTOR ::= "from" | "named" | "at" | "rotated" | "to" | "by" | "spanning" | "as"

# Block keys (lowercase only)
KEYWORDS_BLOCK ::= "dimensions" | "grid" | "path" | "origin" | "pins" | "behavior" | "layout" | "electrical" | "render"

# Origin points (lowercase only)
KEYWORDS_ORIGIN ::= "tl" | "bl" | "tr" | "br"

# Type keywords (lowercase only)
KEYWORDS_TYPE ::= "space" | "component" | "substrate"

# ============================================================================
# PUNCTUATION
# ============================================================================

PUNCTUATION ::= ":" | "[" | "]" | "(" | ")" | "-" | "." | "," | "@"

# ============================================================================
# SYNTAX RULES
# ============================================================================

# 1. Indentation-based blocks (like Python)
#    - Blocks are defined by indentation level
#    - INDENT token marks start of block
#    - DEDENT token marks end of block

# 2. Space after prepositions (Ruby-inspired)
#    - "at [1,10,10]" (correct)
#    - "at[1,10,10]" (lexer accepts, formatter corrects)

# 3. Compact coordinates (no spaces after commas)
#    - "[1,10,10]" (correct)
#    - "[1, 10, 10]" (incorrect - unnecessary spaces)

# 4. Strict unit system
#    - Exactly two formats per unit: symbol and keyboard alias
#    - "4.7kΩ" or "4.7kOhm" (correct)
#    - "4.7k" (incorrect - SPICE notation rejected)
#    - "4K7" (incorrect - IEC 60062 notation rejected)

# 5. Arbitrary rotation angles
#    - "rotated 45" (integer)
#    - "rotated -30.5" (float, negative)
#    - "rotated 90deg" (with optional unit)

# 6. STRICT CASE SENSITIVITY (Tri-Fold Model)
#    - Software Domain: LOWERCASE ONLY
#      * Keywords: "define", "space", "add", "route" (NOT "Define", "Space", "Add")
#      * Origin points: "tl", "bl", "tr", "br" (NOT "TL", "BL", "TR", "BR")
#      * Coordinate axes: "x:", "y:", "z:" (NOT "X:", "Y:", "Z:")
#    - Physics Domain: SI STANDARD CASE
#      * Units: "mV" (NOT "mv"), "kΩ" (NOT "kohm"), "MHz" (NOT "mhz")
#    - User Domain: CASE-SENSITIVE
#      * Component names: "ESP32_WROOM" (exact match required)
#      * Instance names: "MainPower" vs "mainpower" are different

# ============================================================================
# EXAMPLE: Complete LED Circuit with Coordinate Flexibility
# ============================================================================

# import FR4 from standard.materials
# import Battery from standard.power
# 
# define space "LED_Circuit":
#     dimensions: 50mm by 50mm by 4mm
#     grid: 500 by 500 by 4
#     origin: tl                              # Top-Left origin (software-friendly)
#     
#     add substrate(FR4) spanning [1,1,1] to [500,500,4]
#     
#     # Positional coordinates (XYZ order)
#     add Battery (12V) named Power at [10,10,1]
#     
#     # Declarative coordinates (standard order) - lowercase axes only
#     add Resistor (4.7kΩ) named PullUp at [x:20, y:15, z:1] rotated 90
#     
#     # Declarative coordinates (any order - layer first)
#     add LED named Light at [z:1, x:50, y:50] rotated 45
#     
#     # Mixed coordinate styles in routing
#     route Power.Plus to Light.Anode:
#         path:
#             - [10,10,1]                     # Positional
#             - [x:10, y:50, z:1]             # Declarative
#             - [z:1, y:50, x:40]             # Any order
#     
#     expose Light.Cathode as Ground

# Alternative with Bottom-Left origin (CAD-friendly):
# define space "LED_Circuit_CAD":
#     dimensions: 50mm by 50mm by 4mm
#     grid: 500 by 500 by 4
#     origin: bl                              # Bottom-Left origin (hardware-friendly)
#     
#     add LED named Light at [50,450,1]       # Same physical location as above!
#     # Compiler handles coordinate transformation automatically

# ============================================================================
# NOTES
# ============================================================================

# - This grammar is the single source of truth for Hardware Script syntax
# - When adding new syntax, update this file first, then update lexer/parser
# - All syntax decisions are documented in v0.1.3 specification
# - Lexer implementation: src/lexer.rs (Logos-based)
# - Parser implementation: src/parser.rs (Hand-written recursive descent)

# COORDINATE SYSTEM REVOLUTION (v0.1.2+):
# - Changed from ZXY to XYZ coordinate order (alphabetical)
# - Added origin abstraction: TL (default), BL, TR, BR
# - Added declarative coordinate syntax: [x:10, y:15, z:2] (any order)
# - Supports mixed coordinate styles in same file
# - Compiler handles coordinate normalization (User Space → Absolute Space)
# - Solves 40-year TopLeft vs BottomLeft holy war through abstraction
# - See: Docs/v0.1.2/COORDINATE-SYSTEM-ABSTRACTION.md
